--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 
 <script type="text/javascript">
-
+/*Makes the slidshow loop*/
 var slideIndex = 0;
 showSlides();
 
@@ -85,7 +85,7 @@ function showSlides() {
     setTimeout(showSlides, 2000);
 }
 
-
+/*Two functions that make the two seperate flower pics move upon clicking of the button*/
 function Move() {
 	var element = document.getElementById("cherry");
 	var position = 0;
